--- a/devices.ini
+++ b/devices.ini
@@ -7,20 +7,16 @@ spine
 leaf
 
 [spine]
-SPINE01     junos_host=0.0.0.0   loopback_ip=1.1.1.1
-SPINE02     junos_host=0.0.0.0   loopback_ip=1.1.1.2
+SPINE03     junos_host=31.220.65.211   loopback_ip=1.1.1.1
+SPINE04     junos_host=153.92.33.123   loopback_ip=1.1.1.2
 
 [leaf]
-LEAF01      junos_host=0.0.0.0   loopback_ip=1.1.1.11
-LEAF02      junos_host=0.0.0.0   loopback_ip=1.1.1.12
-LEAF03      junos_host=0.0.0.0   loopback_ip=1.1.1.13
-LEAF04      junos_host=0.0.0.0   loopback_ip=1.1.1.14
-LEAF05      junos_host=0.0.0.0   loopback_ip=1.1.1.15
-LEAF06      junos_host=0.0.0.0   loopback_ip=1.1.1.16
+LEAF03      junos_host=153.92.34.190   loopback_ip=1.1.1.11
+LEAF04      junos_host=153.92.35.170   loopback_ip=1.1.1.12
 
 [juniper:vars]
 junos_ssh_user=root
-junos_pwd_clear=mypassword
+junos_pwd_clear=Juniper 
 netconf_port=830
 mgmt_port=em0
 mgmt_sub_mask=23
